--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="container mx-auto p-4">
-      <h1 class="text-3xl font-bold text-center mb-4">Hello Vite!</h1>
-      <button class="btn btn-primary">Click Me</button>
-  </div>
+
+    <div class="boxes"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
