--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="boxes flex flex-row mx-auto items-center gap-4 flex-wrap"></div>
+    <div id="boxes" class="flex flex-row mx-auto items-center gap-4 flex-wrap"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
