--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
+    <div class="bg-base-200" id="topBar">
+      <div class="relative w-full h-16 flex justify-end items-center pr-4" id="barContainer">
+        <div class="relative max-w-xs" id="searchBar">
+          <input id="searchInput" class="w-full py-2 pl-4 pr-10 border border-neutral-600 rounded-md text-base bg-transparent" type="text" placeholder="Search..">
+          <i class="fa-solid fa-magnifying-glass absolute right-3 top-1/2 transform -translate-y-1/2 text-e"></i> <!--https://fontawesome.com/icons-->
+        </div>
+      </div>
+    </div>
 
+    
+    
+    <!-- <div class="collapse bg-base-200">
+      <input type="checkbox" />
+      <div class="collapse-title text-xl font-medium">Click me to show/hide content</div>
+        <div class="collapse-content">
+          <p>hello</p>
+        </div>
+    </div> -->
     <div id="boxes" class="flex flex-row mx-auto items-center gap-2 flex-wrap"></div>
     <script type="module" src="/main.js"></script>
   </body>
